# django-ctct

./: '  .flake8  .gitignore  .pre-commit-config.yaml  MIGRATE  README.md  TODO  TODO.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
django_ctct/: admin.py  apps.py  managers.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
django_ctct/management/commands/: import_ctct.py  sync_ctct.py
django_ctct/migrations/: 0001_initial.py
tests/: factories.py  responses.py  test_models.py
tests/project/: .coverage  README.md  test_admin.py  test_admin_update.html  test_apps.py  test_import.py  test_models.py  test_utils.py  test_views.py
tests/project/project/: local_settings.py  settings.py  urls.py
