[project]
name = "django-ctct"
version = "0.1.0"
description = "A Django interface for the Constant Contact API"
authors = [
    {name = "Geoffrey Eisenbarth",email = "geoffrey.eisenbarth@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "requests (>=2.32.3,<3.0.0)",
    "django-rq (>=3.0.0,<4.0.0)",
    "django-phonenumber-field (>=8.0.0,<9.0.0)",
    "ratelimit (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
