[project]
name = "django-ctct"
version = "0.1.0"
description = "A Django interface for the Constant Contact API"
authors = [
    {name = "Geoffrey Eisenbarth",email = "geoffrey.eisenbarth@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "ratelimit (>=2.2.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^8.3.4"
pytest-django = "^4.10.0"
parameterized = "^0.9.0"
coverage = "^7.6.12"
factory-boy = "^3.3.3"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"

[tool.coverage.report]
show_missing = true
