[project]
name = "django-ctct"
version = "0.0.1.dev1"
description = "A Django interface for the Constant Contact API"
authors = [
    {name = "Geoffrey Eisenbarth",email = "geoffrey.eisenbarth@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django (>=3.2.0,<6.0.0)",     # was >=5.1.6
    "jwt (>=1.3.1,<2.0.0)",
    "requests (>=2.31.0,<3.0.0)",  # was >=2.32.3
    "ratelimit (>=2.2.1,<3.0.0)",
    "pyjwt (>=2.9.0,<3.0.0)",      # was >=2.10.1
    "tqdm (>=4.67.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^8.3.4"
pytest-django = "^4.10.0"
parameterized = "^0.9.0"
coverage = "^7.4.4"  # was ^7.6.12
factory-boy = "^3.3.3"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"

[tool.coverage.report]
show_missing = true
